# mfc-numerics-b

./: .gitignore  README.md  download_data.sh  pyproject.toml
data/: wind_data.csv
exercises/: exercise_3_1.py  exercise_3_2.py  exercise_4_1.py  exercise_5_1.py  utils.py
pollutant/: __init__.py  constants.py  finite_elements.py  quadrature.py  reference_elements.py  utils.py
pollutant/scripts/: interpolate_at_nodes.py  plot_weather_stations.py  plot_wind_speed.py  process_weather_data.py  transform_station_data.py
pollutant/solvers/: advection_diffusion.py  diffusion.py  plot_advection_errors.py
test/: test_exercise_3_2.py  test_exercise_4_1.py
test/test_exercises/: test_exercise_3_1.py  test_exercise_3_2.py  test_exercise_4_1.py  test_exercise_5_1.py
test/test_pollutant/: test_advection_diffusion.py  test_diffusion.py
