[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exercises", "pollutant"]

[project]
name = "numerical-analysis-b"
version = "2024.0"
description="""Exercises and final report for Part B of the MFC CDT Numerical Analysis course."""
license = "MIT"
authors = [
    { name = "Niall Oswald", email = "niall.oswald20@imperial.ac.uk" },
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "pytest",
]

[project.scripts]
interpolate_at_nodes = "pollutant.scripts.interpolate_at_nodes:interpolate_at_nodes"
plot_weather_stations = "pollutant.scripts.plot_weather_stations:plot_weather_stations"
process_weather_data = "pollutant.scripts.process_weather_data:process_weather_data"
transform_station_data = "pollutant.scripts.transform_station_data:transform_station_data"

[project.optional-dependencies]
data = [
    "pandas",
    "pyproj",
]
